--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1132 commands and 150 options.
+This chapter documents a total of 1132 commands and 151 options.
 
 @menu
 * amixer::Control AMixer from Emacs.
@@ -4875,6 +4875,7 @@ Toggle masquerade state.
 @format
 Move forward to the next dd.
 Optional interactive prefix arg speaks the dd.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dd is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4886,6 +4887,7 @@ The dd is automatically spoken if there is no user activity.
 @format
 Move forward to the next dl.
 Optional interactive prefix arg speaks the dl.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dl is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4897,6 +4899,7 @@ The dl is automatically spoken if there is no user activity.
 @format
 Move forward to the next dt.
 Optional interactive prefix arg speaks the dt.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The dt is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4940,6 +4943,7 @@ Prompts if content at point is enclosed by multiple elements.
 @format
 Move forward to the next h.
 Optional interactive prefix arg speaks the h.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4951,6 +4955,7 @@ The h is automatically spoken if there is no user activity.
 @format
 Move forward to the next h1.
 Optional interactive prefix arg speaks the h1.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h1 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4962,6 +4967,7 @@ The h1 is automatically spoken if there is no user activity.
 @format
 Move forward to the next h2.
 Optional interactive prefix arg speaks the h2.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h2 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4973,6 +4979,7 @@ The h2 is automatically spoken if there is no user activity.
 @format
 Move forward to the next h3.
 Optional interactive prefix arg speaks the h3.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h3 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4984,6 +4991,7 @@ The h3 is automatically spoken if there is no user activity.
 @format
 Move forward to the next h4.
 Optional interactive prefix arg speaks the h4.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h4 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -4995,6 +5003,7 @@ The h4 is automatically spoken if there is no user activity.
 @format
 Move forward to the next h5.
 Optional interactive prefix arg speaks the h5.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h5 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5006,6 +5015,7 @@ The h5 is automatically spoken if there is no user activity.
 @format
 Move forward to the next h6.
 Optional interactive prefix arg speaks the h6.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The h6 is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5017,6 +5027,7 @@ The h6 is automatically spoken if there is no user activity.
 @format
 Move forward to the next li.
 Optional interactive prefix arg speaks the li.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The li is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5028,6 +5039,7 @@ The li is automatically spoken if there is no user activity.
 @format
 Move forward to the next ol.
 Optional interactive prefix arg speaks the ol.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ol is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5039,6 +5051,7 @@ The ol is automatically spoken if there is no user activity.
 @format
 Move forward to the next p.
 Optional interactive prefix arg speaks the p.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The p is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5050,6 +5063,7 @@ The p is automatically spoken if there is no user activity.
 @format
 Move forward to the next table.
 Optional interactive prefix arg speaks the table.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The table is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5061,6 +5075,7 @@ The table is automatically spoken if there is no user activity.
 @format
 Move forward to the next ul.
 Optional interactive prefix arg speaks the ul.
+See user option ‘emacspeak-eww-autospeak’ on how to reverse this behavior.
 The ul is automatically spoken if there is no user activity.
 @end format
 @end deffn
@@ -5488,6 +5503,13 @@ Interactively set title --- renames buffer, and sets header-line.
 @end deffn
 
 @subsection emacspeak-eww Options
+
+@defvar {User Option} emacspeak-eww-autospeak
+Turn this on to make section navigation autospeak.
+This also reverses the meaning of the prefix-arg to section nav
+  commands.
+
+@end defvar
 
 @defvar {User Option} emacspeak-eww-inhibit-images
 Turn this on to avoid rendering images.
