--- a/etc/NEWS
+++ b/etc/NEWS
@@ -44,3 +44,7 @@ Those options have been replaced with a single _dtk-caps_ option that
 ** Emacs 28 (Development Version) And Native Compilation
 
    Tested under native compilation in emacs 28.
+
+**  Updated Soundscapes
+
+   The Nature and SurfWaves scapes have been updated.
